--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -49,14 +49,15 @@ body::-webkit-scrollbar-thumb {
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+  /* -webkit-appearance: none;
+  margin: 0; */
+  opacity: 1;
 }
 
 /* Firefox */
-input[type='number'] {
+/* input[type='number'] {
   -moz-appearance: textfield;
-}
+} */
 
 h6 {
   font-family: 'Titillium Web', sans-serif;
